--- a/CSS/geral.css
+++ b/CSS/geral.css
@@ -23,7 +23,13 @@ body{
     width: 100vw;
     max-width: 100vw;
     min-height: 100vh;
-
+    display: grid;
+    grid-template-areas: 
+        "header header"
+        "aside main"
+        "footer footer";
+    grid-template-columns: 1fr 4fr; /* proporção aside:main */
+    grid-template-rows: auto 1fr auto;
 }
     body::-webkit-scrollbar{
     background-color: rgb(26, 26, 54);;
@@ -42,6 +48,7 @@ body{
 
 header{
     grid-area: header;
+    grid-column: 1 / 5;
     width: 100%;
     max-width: 100vw;
     display: flex;
@@ -52,6 +59,13 @@ header img,
 aside img,
 footer img{
     user-select: none;
+    cursor: pointer;
+}
+
+button,
+input[type='checkbox'],
+label[for="adicionarDesejo"]{
+    cursor: pointer;
 }
 
 .opcao{
@@ -75,28 +89,25 @@ footer img{
     .ancora h3{
         overflow: hidden;
     }
-.iconeAncora{
-    width: 3rem;
-}
-    .headerItem{
-        cursor: pointer;
+    .iconeAncora{
+        width: 3rem;
     }
-
-    .headerItem:hover > *,
     .ancora:hover > *{
         filter: brightness(1.6);
     }
 main{
     grid-area: main;
+    grid-column: 2 / 5;
     justify-content: center;
     align-items: center;
     background-color: var(--corFundo);
     border-top:  1px solid rgba(186, 186, 212, 0.459);
     border-bottom: 1px solid rgba(186, 186, 212, 0.459);
-    padding: calc(var(--paddingPadrao)*8) calc(var(--paddingPadrao)*5);
+    padding: calc(var(--paddingPadrao)*2) calc(var(--paddingPadrao)*4);
 }
 aside{
-    grid-area: nav;
+    grid-area: aside;
+    grid-column: 1 / 2;
     background-color: var(--corFundo);
     height: 100%;
     min-width: 120px;
@@ -129,8 +140,8 @@ aside .optionAside:hover{
 
 
 footer{
-    grid-row: span;
     grid-area: footer;
+    grid-column: 1 / 5;
     background-color:var(--corFundo);
     border-top:  1px solid rgba(186, 186, 212, 0.459);
     padding: calc(var(--paddingPadrao)*1) calc(var(--paddingPadrao)*3);
@@ -177,7 +188,8 @@ footer div h3+a{
     backdrop-filter: blur(10px);
     height: 100%;
 }
-#div-config h1{
+#div-config h1,
+#listaDeDesejos h1:not(table h1){
     cursor: pointer;
     color: var(--corSemHover);
     background-color: transparent;
@@ -192,7 +204,8 @@ footer div h3+a{
     margin-right: 20px;
     border-radius: 50%;
 }
-#div-config h1:hover{
+#div-config h1:hover,
+#listaDeDesejos h1:not(table h1):hover{
     background-color: #6c6c7d3b;
 }
     .button-config{
