--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -1,39 +1,24 @@
-body{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    max-width: 100vw;
-}
-
 aside{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: flex-start;
 }
     .opcao{
         display: flex;
         justify-content: center;
     }
 
-main{
-    min-height: 70vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
 div[class^="container"]{
     display: flex;
     gap: 2.5rem;
     overflow-x: scroll;
     background-color: var(--corNavEscura);
-    width: 75vw;
     padding: 2.5rem;
+    margin-bottom: 50px;
     scrollbar-color:  rgb(70, 70, 105) rgb(26, 26, 54);
+    
 }
 
-    .container1{
-        margin-bottom: 150px;
-    }
 
         .informacaoTexto{
             background-color: #2d2d57d2;
@@ -51,8 +36,8 @@ div[class^="container"]{
             }
         .produto{
             background-color: rgb(0, 0, 0);
-            min-width: 400px;
-            min-height: 500px;
+            min-height: 350px;
+            aspect-ratio: 4 / 5;
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -157,19 +142,36 @@ div[class^="container"]{
         #boxImgJogo{
             background-color: rgb(0, 0, 0);
             min-width: 340px;
+            aspect-ratio: 4 / 5;
             background-size: cover !important;
             background-repeat: no-repeat !important;
             background-position: center !important;
-            cursor: pointer;
+            /* cursor: pointer; */
             transition: 0.4s;
         }
+        /* div:has(#adicionarDesejo){
+            align-content: center;
+            text-align: left;
+        }
+        #adicionarDesejo{
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            background-color: var(--corNavEscura);
+            border: 2px solid var(--corFundo);
+            border-radius: 8px;
+            cursor: pointer;
+        }
+        #adicionarDesejo:checked{
+            background-color: lightblue;
+        } */
         #comprarJogo{
             background-color: var(--corNavEscura);
             filter: brightness(1.3);
             padding: 10px 5px;
             border: 0;
             border-radius: 5px;
-            width: 90%;
+            width: 100%;
             font-size: 24px;
             transition: 0.4s;
             text-align: center;
@@ -187,13 +189,14 @@ div[class^="container"]{
     flex-direction: column;
     z-index: 5;
     height: 100vh;
-    width: 40%;
+    width: 50%;
     top: 0;
     left: 0;
     overflow: auto;
 }
-#listaDeDesejos h1{
-    text-align: end;
+#listaDeDesejos table h1{
+    text-align: center;
+    width: 100%;
     padding-right: 100px;
 }
 #listaDeDesejos::-webkit-scrollbar{
@@ -209,9 +212,7 @@ div[class^="container"]{
         background-color: rgb(55, 55, 85);
 
     }
-
     #tabelaListaDesejos{
-        margin-top: 100px;
         width: 70%;
         height: fit-content;
         margin-left: auto;
@@ -267,10 +268,11 @@ div[class^="container"]{
         .usuario{
             margin-left: none;
         }
+    #boxImgJogo{
+        height: 450px !important;
+    }
     #popUpProduto{
         align-items: center;
-        justify-content: center;
-        height: fit-content;
         overflow: scroll;
     }
     #popUpProduto img{
