--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,14 @@
 body{
     display: grid;
     grid-template-areas: 
-    'header header header header header header header'
-    'nav nav main main main main main'
-    'footer footer footer footer footer footer footer';
+        "header header"
+        "aside main"
+        "footer footer";
+    grid-template-columns: 1fr 4fr; /* proporção aside:main */
+    grid-template-rows: auto 1fr auto;
     min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
-    grid-template-rows: minmax(10vh, 20vh), 9fr, 2fr;
 }
 
     main h1, main .containerSlide{
@@ -127,15 +128,6 @@ body{
 }
 
 @media (width < 50em) { /* */
-
-    body{
-        grid-template-areas: 
-        'header header header header header header header'
-        'nav nav nav nav nav nav nav'
-        'main main main main main main main'
-        'footer footer footer footer footer footer footer';
-        min-height: 100vh;
-    }
     main{
         padding: 3rem 0rem;
     }
