--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -1,4 +1,4 @@
-aside{
+.aside{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -255,7 +255,7 @@ div[class^="container"]{
         filter: brightness(1.3);
     }
 @media (width < 50rem) {
-    header{
+    .header{
         display: flex;
         flex-wrap: wrap;
         justify-content: left;
