--- a/CSS/geral.css
+++ b/CSS/geral.css
@@ -1,289 +1,251 @@
-:root{
-    /* #262636, #181828;  */
-    /* #333346, #232333*/
-    --corNavEscura: #262636;
-    --alturaHeader: 18vh;
-    --corFundo: #333346;
-    --corFundoOpacity: #333346c0;
-    --paddingPadrao: 16px;
-    --corSemHover: #b3b3c0;
+:root {
+  /* #262636, #181828;  */
+  /* #333346, #232333*/
+  --corNavEscura: #262636;
+  --alturaHeader: 18vh;
+  --corFundo: #333346;
+  --corFundoOpacity: #333346c0;
+  --paddingPadrao: 16px;
+  --corSemHover: #b3b3c0;
 }
 
-:root:has(body.altoContraste){
-    --corNavEscura: #181828;
-    --corFundo: #232333;
-    --corSemHover: #dedeec;
+:root:has(body.altoContraste) {
+  --corNavEscura: #181828;
+  --corFundo: #232333;
+  --corSemHover: #dedeec;
 }
 
-*{
-    font-family: Montserrat, sans-serif;
-    color: var(--corSemHover);
-    font-weight: 400;
-    max-width: 100vw;
-
+* {
+  font-family: Montserrat, sans-serif;
+  color: var(--corSemHover);
+  font-weight: 400;
+  max-width: 100vw;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    max-width: 100vw;
-    min-height: 100vh;
-    display: grid;
-    grid-template-areas: 
-        "header header"
-        "aside main"
-        "footer footer";
-    grid-template-columns: 1fr 4fr; /* proporção .aside:main */
-    grid-template-rows: auto 1fr auto;
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  max-width: 100vw;
+  min-height: 100vh;
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
+  grid-template-columns: 1fr 4fr; /* proporção .aside:main */
+  grid-template-rows: auto 1fr auto;
 }
-    body::-webkit-scrollbar{
-    background-color: rgb(26, 26, 54);;
-    }
-    body::-webkit-scrollbar-thumb{
-        background-color: rgb(70, 70, 105);
-        border: 3px solid rgb(26, 26, 54);
-        border-radius: 5px;
-        transition: 0.4s;
-    }
-    body::-webkit-scrollbar-thumb:active{
-        background-color: rgb(55, 55, 85);
+body::-webkit-scrollbar {
+  background-color: rgb(26, 26, 54);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(70, 70, 105);
+  border: 3px solid rgb(26, 26, 54);
+  border-radius: 5px;
+  transition: 0.4s;
+}
+body::-webkit-scrollbar-thumb:active {
+  background-color: rgb(55, 55, 85);
+}
 
-    }
+br, hr, img{
+    user-select: none;
+}
 
-
-.header{
-    grid-area: header;
-    grid-column: 1 / 5;
-    width: 100%;
-    max-width: 100vw;
-    display: flex;
-    box-sizing: border-box;
+.header {
+  grid-area: header;
+  grid-column: 1 / 5;
+  width: 100%;
+  max-width: 100vw;
+  display: flex;
+  box-sizing: border-box;
 }
 
 .header img,
 .aside img,
-.footer img{
-    user-select: none;
-    cursor: pointer;
+.footer img {
+  user-select: none;
+  cursor: pointer;
 }
 
 button,
-input[type='checkbox'],
-label[for="adicionarDesejo"]{
-    cursor: pointer;
+input[type="checkbox"],
+label[for="adicionarDesejo"] {
+  cursor: pointer;
 }
 
-.opcao{
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    padding: 1rem 0rem;
-    min-width: 200px;
-    width: 40%;
+.opcao {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding: 1rem 0rem;
+  min-width: 200px;
+  width: 40%;
 }
 
-.ancora{
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    text-decoration: underline;
-    gap: 0.5rem;
-    cursor: pointer;
-
+.ancora {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  text-decoration: underline;
+  gap: 0.5rem;
+  cursor: pointer;
 }
-    .ancora h3{
-        overflow: hidden;
-    }
-    .iconeAncora{
-        width: 3rem;
-    }
-    .ancora:hover > *{
-        filter: brightness(1.6);
-    }
-main{
-    grid-area: main;
-    grid-column: 2 / 5;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--corFundo);
-    border-top:  1px solid rgba(186, 186, 212, 0.459);
-    border-bottom: 1px solid rgba(186, 186, 212, 0.459);
-    padding: calc(var(--paddingPadrao)*2) calc(var(--paddingPadrao)*4);
+.ancora h3 {
+  overflow: hidden;
 }
-.aside{
-    grid-area: aside;
-    grid-column: 1 / 2;
-    background-color: var(--corFundo);
-    height: 100%;
-    min-width: 120px;
-    border-right: 1px solid rgba(186, 186, 212, 0.459);
-    border-top:  1px solid rgba(186, 186, 212, 0.459);
-    white-space: "ellipse";
-    overflow: hidden;
+.iconeAncora {
+  width: 3rem;
 }
-.aside .iconOptionAside{
-    width: 50px;
+.ancora:hover > * {
+  filter: brightness(1.6);
 }
-.aside .optionAside{
-    padding: var(--paddingPadrao);
-    border-bottom: 1px solid var(--corSemHover);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    text-decoration: none;
-    font-size: 1em;
+main {
+  grid-area: main;
+  grid-column: 2 / 5;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--corFundo);
+  border-top: 1px solid rgba(186, 186, 212, 0.459);
+  border-bottom: 1px solid rgba(186, 186, 212, 0.459);
+  padding: calc(var(--paddingPadrao) * 2) calc(var(--paddingPadrao) * 4);
 }
-.aside .optionAside span{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+.aside {
+  grid-area: aside;
+  grid-column: 1 / 2;
+  background-color: var(--corFundo);
+  height: 100%;
+  min-width: 120px;
+  border-right: 1px solid rgba(186, 186, 212, 0.459);
+  border-top: 1px solid rgba(186, 186, 212, 0.459);
+  white-space: "ellipse";
+  overflow: hidden;
 }
-
-.aside .optionAside:hover{
-    backdrop-filter: brightness(1.2);
+.aside .iconOptionAside {
+  width: 50px;
+}
+.aside .optionAside {
+  padding: var(--paddingPadrao);
+  border-bottom: 1px solid var(--corSemHover);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-decoration: none;
+  font-size: 1em;
+}
+.aside .optionAside span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-
-.footer{
-    grid-area: footer;
-    grid-column: 1 / 5;
-    background-color:var(--corFundo);
-    border-top:  1px solid rgba(186, 186, 212, 0.459);
-    padding: calc(var(--paddingPadrao)*1) calc(var(--paddingPadrao)*3);
-    text-align: justify;
-    display: flex;
-    justify-content: space-around;
-    box-sizing: border-box;
+.aside .optionAside:hover {
+  backdrop-filter: brightness(1.2);
 }
 
-.footer h5{
-    margin: 0;
-}
-.footer div h5+a{
-    text-decoration: none;
-}
-
-.desenvolvedorFooter{
-    display: flex;
-    font-size: 1rem;
-    align-items: center;
-    gap: 1rem;
-    transition: 1s;
-}
-.desenvolvedorFooter:hover .imgFooter{
-    fill: #262636;
-    filter: brightness(0.2) invert(13%) sepia(31%) saturate(573%) hue-rotate(202deg) contrast(91%);
-}
-.desenvolvedorFooter:hover p{
-    color: aliceblue;
-}
-.imgFooter{
-    aspect-ratio: 1 / 1;
-    width: 24px;
+.footer {
+  grid-area: footer;
+  grid-column: 1 / 5;
+  background-color: var(--corFundo);
+  border-top: 1px solid rgba(186, 186, 212, 0.459);
+  padding: calc(var(--paddingPadrao) * 1) calc(var(--paddingPadrao) * 3);
+  text-align: justify;
+  display: flex;
+  justify-content: space-around;
+  box-sizing: border-box;
 }
 
+.footer h5 {
+  margin: 0;
+}
+.footer div h5 + a {
+  text-decoration: none;
+}
 
+.desenvolvedorFooter {
+  display: flex;
+  font-size: 1rem;
+  align-items: center;
+  gap: 1rem;
+  transition: 1s;
+}
+.desenvolvedorFooter:hover .imgFooter {
+  fill: #262636;
+  filter: brightness(0.2) invert(13%) sepia(31%) saturate(573%) hue-rotate(202deg) contrast(91%);
+}
+.desenvolvedorFooter:hover p {
+  color: aliceblue;
+}
+.imgFooter {
+  aspect-ratio: 1 / 1;
+  width: 24px;
+}
 
-#div-config{
-    z-index: 5;
-    position: fixed;
-    top: 0;
-    display: none;
-    flex-direction: column;
-    width: 33%;
-    min-width: 800px;
-    background-color:  var(--corFundoOpacity) ;
-    backdrop-filter: blur(10px);
-    height: 100%;
+#div-config {
+  z-index: 5;
+  position: fixed;
+  top: 0;
+  display: none;
+  flex-direction: column;
+  width: 33%;
+  min-width: 800px;
+  background-color: var(--corFundoOpacity);
+  backdrop-filter: blur(10px);
+  height: 100%;
 }
 #div-config h1,
-#listaDeDesejos h1:not(table h1){
-    cursor: pointer;
-    color: var(--corSemHover);
-    background-color: transparent;
-    font-weight: 600;
-    text-align: center;
-    height: 40px;
-    width: 40px;
-    display: inline-block;
-    left: 20px;
-    padding: 4px;
-    margin-left: auto;
-    margin-right: 20px;
-    border-radius: 50%;
+#listaDeDesejos h1:not(table h1) {
+  cursor: pointer;
+  color: var(--corSemHover);
+  background-color: transparent;
+  font-weight: 600;
+  text-align: center;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  left: 20px;
+  padding: 4px;
+  margin-left: auto;
+  margin-right: 20px;
+  border-radius: 50%;
 }
 #div-config h1:hover,
-#listaDeDesejos h1:not(table h1):hover{
-    background-color: #6c6c7d3b;
+#listaDeDesejos h1:not(table h1):hover {
+  background-color: #6c6c7d3b;
 }
-    .button-config{
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        margin-bottom: 5px;
-        padding: 20px 12px;
-        width: 80%;
-        font-size: 1.5em;
-        border: 0;
-        border-radius: 10px;
-        background-color: var(--corNavEscura); 
-    }
-        .button-config:hover{
-            filter: brightness(1.2);
-            filter: drop-shadow(0px 0px 1px white);
-        }
-
-#div-user{
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    z-index: 4;
-    top: 0;
-    right: 0px;
-    padding: 35px 20px;
-    width: 200px;
-    background-color: var(--corNavEscura);
-    color: var(--corSemHover);
-    border: 2px solid lightgray;
-    border-right: 0;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    transition: 0.6s;
+.button-config {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding: 20px 12px;
+  width: 80%;
+  font-size: 1.5em;
+  border: 0;
+  border-radius: 10px;
+  background-color: var(--corNavEscura);
 }
-    #buttonFechar,
-    #buttonLogarSair{
-        background-color: var(--corNavEscura);
-        color: var(--corSemHover);
-        padding: 5px;
-        font-size: 1.3em;
-        border: 1px solid lightgray;
-        border-radius: 10px;
-        transition: 0.3s;
-    }
-    #buttonFechar:hover,
-    #buttonLogarSair:hover{
-        filter: brightness(1.3);
-    }
-    #buttonFechar:active,
-    #buttonLogarSair:active{
-        transition: 0.1s;
-        background-color: var(--corFundo);
-        color: var(--corSemHover);
-    }
-body{
-    overflow-x: hidden;
+.button-config:hover {
+  filter: brightness(1.2);
+  filter: drop-shadow(0px 0px 1px white);
 }
 
-@media (width <= 50em) { /*50em = 800px*/
-    #div-config{
-        padding: 10px;
-        max-width: 100%;
-        min-width: 100%;
-    }
 
-    .aside{
-        flex-wrap: wrap;
-        overflow: auto;
-    }
+body {
+  overflow-x: hidden;
+}
+
+@media (width <= 50em) {
+  /*50em = 800px*/
+  #div-config {
+    padding: 10px;
+    max-width: 100%;
+    min-width: 100%;
+  }
+
+  .aside {
+    flex-wrap: wrap;
+    overflow: auto;
+  }
 }
